test_regress/t/t_prot_lib_inout_bad.out
%Error-UNSUPPORTED: t/t_prot_lib_inout_bad.v:9:28: Unsupported: protect-lib port direction: INOUT
    9 |                     inout  z,
      |                            ^
%Error: Exiting due to
